1.8a:
-----

- Added "Stay always on top" option (accessible from trayIcon->Options->Stay always on top)
- Added "Minimize to System tray" option (accessible from trayIcon->Options->Minimize to System tray)
- Added "Paste URL from Clipboard" button in "Add Video" form
- Added "Time Remaining" for video conversions
- Added: After a new instalation, the program check for new updates

1.7.1a:
-------

- Fixed bug (Error: downloads were not finished!! ** IMPORTANT **)
- Fixed bug (Error: "Display popup" option was not saved)
- Fixed bug (Error: prevent access violation on invalid videos)

1.7a
----

- Added 10 new services:
    - XTube
    - Zuuble
    - ZippyVideos (FLV & WMV videos)
    - Zedge
    - Blip
    - Ceknito
    - ZanyVideos
    - Zaable
    - YouTubeIslam
    - YourFileHost

- Revised 2 services:
    - Tu.tv (yes, again... :P)
    - MySpaceTv

- Fixed bug (Error: external links were not opened... such as "sf.net tracker", "homepage in information form", etc...)
- Fixed bug (Error: "Content-Length" was now correctly parsed in http class when a ";" was found)
- Fixed bug (Error: multiple "Bug Reports" were displayed at same time and always the same video)

- Improved download speed average 
- Improved time remaining calculation
- Improved TrayIcon (extended display information: current download/conversion video is displayed)
- Improved internal HTTP class
- Improved video errors management


1.6.1a
------

- Revised 1 service:
    - Tu.tv

- Fixed bug (Error: the app was closed if the drag&drop window was active and "Bug Report" was closed)
- Fixed bug (Error: dropped videos were corrupted)

- Improved TrayIcon (on double click over the tray icon, now the main form is restored)
- Improved internal parser functions

- Revised Spanish (ES) language file
- Revised Catalan (CAT) language file

1.6a
----

- Added 2 new services:
    - GameSpot
    - Stage6

- Revised 2 services:
    - Dailymotion (also updated Dailymotion icon)
    - Yuvutu
