@@ -33,34 +33,31 @@
 #include "http.h"
 #include "videoitem.h"
 
-class VideoDownload : public QObject
+class VideoDownload;
+
+/*! Single download */
+class DownloadItem : public QObject
 {
 Q_OBJECT
 	private:
+		VideoDownload *parent;	// parent class
 		Http *http;				//!< download class
 		VideoItem *videoItem;	//!< current video item
-		QString downloadDir;	//!< where to download videos
 		/*! when work started */
 		void workStarted();
 		/*! when work finished */
 		void workFinished();
 	public:
-		/*! Class csontructor */
-		VideoDownload(QString downloadDir);
-		/*! class destructor */
-		~VideoDownload();
-		/*! start to download video */
-		void downloadVideo(VideoItem *videoItem);
-		/*! cancel download */
+		/*! Class constructor */
+		DownloadItem(VideoDownload *parent, VideoItem *videoItem);
+		/*! Class destructor */
+		~DownloadItem();
+		/*! Start the download */
+		void startDownload();
+		/*! Cancel the download */
 		void cancelDownload();
-		/*! Get if possible start a new download */
-		bool canStartDownload();
-		/*! Get if is downloading some video */
-		bool isDownloading();
-		/*! Get where to save downloads */
-		QString getDownloadDir();
-		/*! Set where to save downloads */
-		void setDownloadDir(QString downloadDir);
+		/*! Get the video item associated */
+		VideoItem* getVideoItem();
 	private slots:
 		/*! A new download started */
 		void downloadStarted();
@@ -72,6 +69,62 @@ Q_OBJECT
 		void downloadError(int error);
 		/*! A single download event */
 		void downloadEvent(int pos, int max);
+	signals:
+		/*! Video item has been modified */
+		void videoItemUpdated_child(VideoItem *videoItem);
+		/*! A Video item download started */
+		void downloadStarted_child(VideoItem *videoItem);
+		/*! A Video item download finished */
+		void downloadFinished_child(VideoItem *videoItem);
+		/*! This signal is send when all work finished */
+		void downloadDestroyable();
+};
+
+/*! Downloads controller */
+class VideoDownload : public QObject
+{
+Q_OBJECT
+	private:
+		QList<DownloadItem *> *downloads;		//!< active downloads
+		QString downloadDir;					//!< where to download videos
+		int maxActiveDownloads;					//!< maximum active downloads
+		DownloadItem *downloadItemToDestroy;	//!< Download item to destroy
+		/*! Find a download item by a video item*/
+		DownloadItem* findDownloadItemByVideoItem(VideoItem *videoItem);
+	public:
+		/*! Class csontructor */
+		VideoDownload(QString downloadDir, int maxActiveDownloads);
+		/*! class destructor */
+		~VideoDownload();
+		/*! start to download video */
+		void downloadVideo(VideoItem *videoItem);
+		/*! cancel download */
+		void cancelDownload(VideoItem *videoItem);
+		/*! cancel all downloads */
+		void cancelAllDownloads();
+		/*! Get if possible start a new download */
+		bool canStartDownload();
+		/*! Get if is downloading some video */
+		bool isDownloading();
+		/*! Get where to save downloads */
+		QString getDownloadDir();
+		/*! Set where to save downloads */
+		void setDownloadDir(QString downloadDir);
+		/*! Get how many downloads can run simultaneous */
+		int getMaxActiveDownloads();
+		/*! Set how many downloads can run simultaneous */
+		void setMaxActiveDownloads(int maxActiveDownloads);
+	private slots:
+		/*! Video item has been modified */
+		void videoItemUpdated_child(VideoItem *videoItem);
+		/*! A Video item download started */
+		void downloadStarted_child(VideoItem *videoItem);
+		/*! A Video item download finished */
+		void downloadFinished_child(VideoItem *videoItem);
+		/*! The download object can be destroyed (and deleted from list) */
+		void downloadDestroyable();
+		/*! Destroy the last downloadItem finished */
+		void destroyDownload();
 	signals:
 		/*! Video item has been modified */
 		void videoItemUpdated(VideoItem *videoItem);
