@@ -70,7 +70,7 @@
    <item row="0" column="1" >
     <widget class="QStackedWidget" name="pgOptions" >
      <property name="currentIndex" >
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="pgBasic" >
       <layout class="QGridLayout" >
@@ -80,19 +80,7 @@
           <string>Downloads</string>
          </property>
          <layout class="QGridLayout" >
-          <property name="leftMargin" >
-           <number>12</number>
-          </property>
-          <property name="topMargin" >
-           <number>12</number>
-          </property>
-          <property name="rightMargin" >
-           <number>12</number>
-          </property>
-          <property name="bottomMargin" >
-           <number>12</number>
-          </property>
-          <item row="0" column="0" >
+          <item row="0" column="0" colspan="2" >
            <widget class="QLineEdit" name="edtDownloadsDir" >
             <property name="minimumSize" >
              <size>
@@ -102,17 +90,43 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0" >
+          <item row="0" column="2" >
+           <widget class="QToolButton" name="spbSelectDownloadDir" >
+            <property name="text" >
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0" colspan="2" >
            <widget class="QCheckBox" name="chbDisplayPopup" >
             <property name="text" >
              <string>Display a popup window on finish a download/conversion video</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="1" >
-           <widget class="QToolButton" name="spbSelectDownloadDir" >
+          <item row="2" column="0" >
+           <widget class="QLabel" name="lblMaxDownloads" >
             <property name="text" >
-             <string>...</string>
+             <string>Maximum simultaneous downloads &lt;span style="color:#a9a9a9;">(the recomended value is 4/6 downloads)&lt;/span></string>
+            </property>
+            <property name="wordWrap" >
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1" >
+           <widget class="QSpinBox" name="spinBoxMaxDownloads" >
+            <property name="maximumSize" >
+             <size>
+              <width>50</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="minimum" >
+             <number>1</number>
+            </property>
+            <property name="maximum" >
+             <number>100</number>
             </property>
            </widget>
           </item>
